fix registration
