# model/user.go
@@ -4,15 +4,21 @@ import "time"
 
 // User is user model
 type User struct {
-	ID        int
-	Username  string
-	Password  string
-	Fname     *string
-	Lname     *string
-	Mail      string
-	Birthdate time.Time
-	Location  *string
-	Points    int
-	CreatedAt time.Time
-	UpdatedAt *time.Time
+	ID             int
+	Username       string
+	Password       string
+	SecretQuestion string
+	SecretAnswer   string
+	GivenNames     string
+	LastNames      string
+	Email          string
+	Birthday       time.Time
+	Location       string
+	Points         int
+	CreatedAt      time.Time
+	UpdatedAt      *time.Time
+}
+
+func (User) TableName() string {
+	return "customers"
 }
