# swagger/swagger.yaml
@@ -97,6 +97,20 @@ definitions:
       read: false
       title: Qui molestiae laborum.
       updated_at: 2007-05-02T17:24:47+09:00
+    - body: Qui non aut in eum.
+      created_at: 1973-06-28T15:55:33+09:00
+      date: 1983-05-14T01:49:52+09:00
+      id: 9.719804e+17
+      read: false
+      title: Qui molestiae laborum.
+      updated_at: 2007-05-02T17:24:47+09:00
+    - body: Qui non aut in eum.
+      created_at: 1973-06-28T15:55:33+09:00
+      date: 1983-05-14T01:49:52+09:00
+      id: 9.719804e+17
+      read: false
+      title: Qui molestiae laborum.
+      updated_at: 2007-05-02T17:24:47+09:00
     items:
       $ref: '#/definitions/GoaMessage'
     title: 'Mediatype identifier: application/vnd.goa.message+json; type=collection;
@@ -158,6 +172,13 @@ definitions:
     description: GoaNewsCollection is the media type for an array of GoaNews (default
       view)
     example:
+    - created_at: 2000-04-11T17:00:35+09:00
+      date: 1982-04-26T06:55:54+09:00
+      id: 8.716162e+16
+      image_url: Fugiat placeat possimus nihil aperiam.
+      title: Sit iure repellat qui.
+      updated_at: 2005-01-04T21:17:00+09:00
+      url: Soluta ipsa.
     - created_at: 2000-04-11T17:00:35+09:00
       date: 1982-04-26T06:55:54+09:00
       id: 8.716162e+16
@@ -766,7 +787,9 @@ definitions:
       lname: Veritatis vel et ut enim id.
       pwd: Similique impedit ipsa ipsam et veniam.
       referrer: 1.8656047e+18
-      user: Nulla sit et officia libero.
+      secret_answer: Nulla sit et officia libero.
+      secret_question: Quis est est molestiae et sequi voluptatem.
+      user: Asperiores accusamus dicta necessitatibus ipsa similique illum.
     properties:
       fname:
         description: First name
@@ -785,13 +808,23 @@ definitions:
         example: 1.8656047e+18
         format: int64
         type: integer
+      secret_answer:
+        description: Secret answer
+        example: Nulla sit et officia libero.
+        type: string
+      secret_question:
+        description: Secret question
+        example: Quis est est molestiae et sequi voluptatem.
+        type: string
       user:
         description: Login username
-        example: Nulla sit et officia libero.
+        example: Asperiores accusamus dicta necessitatibus ipsa similique illum.
         type: string
     required:
     - user
     - pwd
+    - secret_question
+    - secret_answer
     title: Registerrequest
     type: object
   SigninAuthPayload:
@@ -876,14 +909,14 @@ definitions:
     type: object
   UpdatepasswordUsersPayload:
     example:
-      oldPassword: Quis est est molestiae et sequi voluptatem.
-      password: Asperiores accusamus dicta necessitatibus ipsa similique illum.
+      oldPassword: Modi eos suscipit ipsam et neque.
+      password: Vel ut voluptatem dolores similique error magnam.
     properties:
       oldPassword:
-        example: Quis est est molestiae et sequi voluptatem.
+        example: Modi eos suscipit ipsam et neque.
         type: string
       password:
-        example: Asperiores accusamus dicta necessitatibus ipsa similique illum.
+        example: Vel ut voluptatem dolores similique error magnam.
         type: string
     required:
     - password
